<resources>
    <string name="app_name" translatable="false">Infinity News</string>

    <!-- Tutorial Activity -->
    <string name="get_started_button">Get Started</string>
    <string name="tutorial1_title">Get Latest News</string>
    <string name="tutorial2_title">Keep Up-To-Date</string>
    <string name="tutorial3_title">Smart Searching</string>
    <string name="tutorial4_title">Get Notified Instantly</string>
    <string name="tutorial1_description">Get latest News Posts from over 100+ of your favorite and most famous Sources and Magazines in one App</string>
    <string name="tutorial2_description">Keep Up-to-date with the Daily and Breaking News in your Area by using the Daily Recap Stories</string>
    <string name="tutorial3_description">Search By Title, Tags, Date and Keywords for all the News Posts and Stories that you need</string>
    <string name="tutorial4_description">Receive Notifications for Posts as soon as Published by Subscribing to news sources Push Notifications</string>

    <!-- LoginSignup Activity -->
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">Skip</string>

    <!-- Error and State Strings -->
    <string name="network_error">No Network Connection</string>
    <string name="wrong_username_or_password">Wrong Username or Password</string>
    <string name="username_taken">Username already taken</string>
    <string name="invalid_name">Invalid First or Last Name (Must be more than 3 letters)</string>
    <string name="invalid_username">Invalid Username. Must be more than 8 Characters. English Letters, digits and (@/./+/-/_) only.</string>
    <string name="invalid_password">Invalid or Not Matching Password (Must be more than 8 letter)</string>
    <string name="retry">Retry</string>
    <string name="no_feed">Your Feed is Empty</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="just_now">Right Now</string>

    <!-- ChooseCategories Activity -->
    <string name="choose_topics">Choose at least 3 topics you like</string>

    <!-- Main Activity -->
    <string name="news">News</string>

    <!-- Main Activity NavigationView -->
    <string name="news_sources">News Sources</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_categories">Change categories</string>
    <string name="settings">Settings</string>
    <string name="open_nav_drawer" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav_drawer" translatable="false">Close Navigation Drawer</string>
    <string name="login_or_signup">Login or Signup</string>

    <!-- Settings Activity -->
    <string name="language">Language</string>
    <string name="text_size">Text Size</string>
    <string name="choose_lanuage">Choose a Language</string>
    <string name="choose_text_size">Choose Text Size</string>

    <!-- Empty Activities -->
    <string name="empty_screen">This Feature will be implemented soon!</string>

    <!-- Search Activity -->
    <string name="search">Search</string>
    <string name="tags">Tags</string>
    <string name="comments">Comments</string>
    <string name="post_a_comment">Post a comment</string>
    <string name="send">Send</string>

    <!-- PostDetailActivity -->
    <string name="view_on_source">View Post on original source</string>

</resources>
