<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newsSources"
        android:icon="@drawable/ic_news_sources"
        android:title="@string/news_sources" />

    <item
        android:id="@+id/changeCategoies"
        android:icon="@drawable/ic_edit"
        android:title="@string/change_categories" />

    <item
        android:id="@+id/editProfile"
        android:icon="@drawable/ic_person"
        android:title="@string/edit_profile"
        android:visible="false" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        android:visible="false" />
</menu>