<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.activities.ChooseCategoriesActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/choose_topics"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:autoSizeMaxTextSize="32sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline37"
        tools:visibility="visible" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="@drawable/get_started_button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:onClick="onNextButtonClicked"
        android:stateListAnimator="@null"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:autoSizeMaxTextSize="19sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline37">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <TextView
        android:id="@+id/nextErrorLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <ProgressBar
        android:id="@+id/nextProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline55"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toBottomOf="@+id/nextErrorLabel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>